[tool.poetry]
name = "georeader-spaceml"
version = "2.3.4"
description = "🛰️ Process raster data in python"
authors = ["Gonzalo Mateo-García", "Kike Portales", "Manuel Montesino San Martin", "Juan Emmanuel Johnson"]
repository = "https://github.com/spaceml-org/georeader"
documentation = "https://spaceml-org.github.io/georeader/"
readme = "README.md"
license = "	LGPL-3.0"
packages = [
  {include = "georeader"}
]
include = ["georeader/SolarIrradiance_Thuillier.csv"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
rasterio = ">=1"
numpy = ">=1"
shapely = ">=2"
geopandas = ">=1"
mercantile = ">=1"
# Optional dependencies surfaced via `[tool.poetry.extras]` below.
# Installed only when users opt in (e.g. `pip install
# 'georeader-spaceml[carbonmapper]'`).
pydantic = {version = ">=2", optional = true}
requests = {version = ">=2", optional = true}

[tool.poetry.extras]
# Carbon Mapper reader (`georeader.readers.carbonmapper`) — STAC + plume
# catalogue API, typed plume / source / raster wrappers, file-based
# token persistence. Pulls in pydantic (for CMRawPlume) and requests
# (for the API client). Azure SDK is intentionally NOT included —
# downstream consumers (e.g. UNEP IMEO MARS) wire keyvault-backed
# token loading on top of the file-based primitives in
# `CarbonMapperConfig`.
carbonmapper = ["pydantic", "requests"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
scikit-image = "^0.24.0"
# Runs the docs/ notebooks as integration tests (`make test-notebooks`).
# ipykernel provides the kernel nbmake executes the notebooks in.
nbmake = "^1"
ipykernel = "^6.29.5"
# CI installs the dev group; pull in the carbonmapper extras here
# explicitly so the carbonmapper reader's tests run in CI even though
# the dependencies are gated as optional for end users.
pydantic = ">=2"
requests = ">=2"
# Loads the repo-root .env (credentials/config) in docs/conftest.py for the notebook tests.
python-dotenv = "^1.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = {extras = ["imaging"], version = "^9.5.43"}
mkdocstrings = {extras = ["python"], version = "^0.26.1"}
mknotebooks = "^0.8"
pygments = "^2.18.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pymdown-extensions = "^10.12"
ghp-import = "^2.1.0"

[tool.poetry.group.tutorial.dependencies]
fsspec = "^2025.9.0"
gcsfs = "^2025.9.0"
requests = "^2.32.3"
lxml = "^5.3.0"
h5py = "^3.12.1"
mlstac = "^0.1.8"
ipykernel = "^6.29.5"
pyarrow = "^18.0.0"
fastparquet = "^2024.5.0"
matplotlib = "^3.9.2"
# Engine pandas uses to read the Sentinel-2 SRF .xlsx in S2_SAFE_reader.read_srf
# (needed by docs/Sentinel-2/explore_metadata_s2.ipynb).
openpyxl = "^3.1.5"
folium = "^0.18.0"
earthengine-api = "^1.2.0"
pysolar = "^0.11"
adlfs = "^2024.7.0"
scipy = "^1.15.1"
mapclassify = "^2.10.0"
pystac-client = "^0.9.0"
s3fs = "^2025.9.0"
xarray = "^2025.12.0"
h5netcdf = "^1.8.0"
matplotlib-scalebar = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["georeader"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"



[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
